a small z-index issue has been fixed

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -41,7 +41,7 @@ button{
     width: 100%;
     background-color: white;
     padding: 1rem;
-    z-index: 10;
+    z-index: 100;
     overflow-y: auto;
     &::-webkit-scrollbar {
       display: none;
